# interview-tech-test

./: .env.example  .gcloudignore  .gitignore  README.md  api.py  app.py  app.yaml  http_status.py  populate-db.py  pyproject.toml  requirements.txt
.github/workflows/: coverage.yml  python-app.yml
api/: api.py  exceptions.py  firebase_client.py  permissions.py  services.py
api/auth/: permissions.py  services.py  views.py
api/auth/interfaces/: views.py
api/router/: api_route.py
api/views/: __init__.py  model_view.py  view.py
app/: app.py  settings.py  urls.py
app/movies/: services.py  views.py
tests/: conftest.py  fake-credentials.json
tests/api/: test_api.py  test_auth_abstract.py  test_firebase_client.py  test_permissions.py  test_services_abstract.py  test_views_abstract.py
tests/app/movies/services/: test_delete_services.py  test_get_services.py  test_list_services.py  test_post_services.py
tests/app/movies/views/: test_delete_views.py  test_get_views.py  test_post_views.py  test_put_views.py
