[project]
name = "brite-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools==5.5.0",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "firebase-admin>=6.6.0",
    "google-api-core==2.24.0",
    "google-api-python-client>=2.159.0",
    "google-auth==2.37.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "google-cloud-core==2.4.1",
    "google-cloud-firestore==2.20.0",
    "googleapis-common-protos==1.66.0",
    "grpcio==1.69.0",
    "grpcio-status==1.69.0",
    "gunicorn>=23.0.0",
    "idna==3.10",
    "packaging==24.2",
    "parse>=1.20.2",
    "proto-plus==1.25.0",
    "protobuf==5.29.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "python-dotenv==1.0.1",
    "python-firebase>=1.2",
    "requests==2.32.3",
    "requests-wsgi-adapter>=0.4.1",
    "rsa==4.9",
    "urllib3==2.3.0",
    "webob==1.8.9",
]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report html"

[tool.coverage.run]
omit = [
    "tests/*",
]

[tool.coverage.report]
exclude_also = [
    'class LoginService',
    'class LoginView',
]